[project]
name = "rag-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "gradio>=6.19.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langgraph>=1.2.7",
    "pandas>=3.0.3",
    "pypdf>=6.14.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
